chandeliers-lus/tests/compile_fail/ui/causality/redef-var-ii.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-ii.rs:2:17
  |
2 |     node foo(a, a : int) returns ();
  |                 ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-ii.rs:2:14
  |
2 |     node foo(a, a : int) returns ();
  |              ^
